Fix whitespace in component docs

--- a/docs/components/_example.scss
+++ b/docs/components/_example.scss
@@ -1,16 +1,13 @@
-
 .app-example__iframe {
-  width: 100%;
-  max-width: 100%;
-  height: 300px;
-  display: block;
-  border: 0;
   background-color: govuk-colour("white");
+  border: 0;
+  display: block;
+  height: 300px;
+  max-width: 100%;
+  width: 100%;
 }
 
 .app-example__link {
-  border-top-width: 1px;
-  border-top-style: solid;
-  border-color: $govuk-border-colour;
-  padding: 10px 20px;
+  border-top: 1px solid $govuk-border-colour;
+  padding: govuk-spacing(2) govuk-spacing(4);
 }
